[tool.poetry]
name = "handwritten digit recognition"
version = "0.1.0"
description = "based on https://towardsdatascience.com/handwritten-digit-mnist-pytorch-977b5338e627"
authors = ["Aaron <57018940+0dm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
